# exvora-ai

./: .gitignore  API_INTEGRATION_GUIDE.md  Dockerfile  README.md  README_MCP_SERVER.md  TRIPADVISOR_INTEGRATION.md  env.example  fastapi_mcp_server.py  fastapi_mcp_server_http.py  lambda_handler.py  openapi.json  pyproject.toml  requirements.txt  response.json  test_fuzzy.py
.github/workflows/: ci.yml
app/: config.py  logs.py  main.py  static_mount_note.txt
app/api/: admin.py  ai_rerank.py  errors.py  rerank.py  routes.py
app/common/: logging.py
app/dataset/: fixtures.py  loader.py  poi_transpiler.py  pois.sample.json  sri_lanka_tourist_spots.csv
app/engine/: __init__.py  affinity.py  budget.py  candidates.py  features.py  feedback.py  ml_pref.py  rank.py  reranker.py  rules.py  schedule.py  semantic_star.py  transfers.py
app/models/: pref_lr_v1.joblib  pref_lr_v1.metadata.json
app/nlp/: __init__.py  parse.py
app/schemas/: models.py
app/share/: __init__.py  store.py
app/utils/: currency.py
clients/node/: index.ts
clients/python/: exvora.py
data/: pref_training.csv
data/fixtures/: pois_sl_min.json
docs/: EXVORA_CODEBASE_REPORT.md
mcp-server-python/: QUICK_START.md  README.md  claude_config_example.json  pyproject.toml  requirements.txt  setup.py  simple_webhook.py
mcp-server-python/exvora_mcp_server/: __init__.py  data_validator.py  google_places_client.py  http_server.py  itinerary_analyzer.py  main.py  mcp_http_server.py  poi_manager.py  travel_insights.py  tripadvisor_client.py  webhook_server.py
postman/: Exvora.postman_collection.json
saved_model/: embeddings.npy  metadata.json
scripts/: bench.py  dump_openapi.py  train_pref_model.py
static/: index.html  style.css
tests/: test_affinity.py  test_api_invariants.py  test_api_rerank.py  test_budget_optimizer.py  test_candidates_rules.py  test_engine_core.py  test_engine_core.py.bak  test_feedback_reverify.py  test_fixture_dataset.py  test_itinerary_api.py  test_itinerary_api_budget.py  test_itinerary_rerank_integration.py  test_ml_pref.py  test_nlp_plan.py  test_rank_pref_integration.py  test_rerank_with_fixture.py  test_reranker_unit.py  test_safety_health.py.bak  test_scheduler_transfers.py  test_share_admin.py  test_transfer_limits.py  test_transfers.py.bak
